--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>Area</th>
       <th>Name</th>
-      <th>Type</th>
+      <th>Shape</th>
       <th>Pos</th>
       <th>Priority</th>
       <th>Owners</th>
@@ -15,30 +15,38 @@
     <% @regions.each do |region| %>
     <tr>
       <td><%= region.area %></td>
-      <td><%= region.name %></td>
-      <td><%= region.type %></td>
+      <td><%= link_to region.name, region_path(region) %></td>
+      <td><%= region.shape %></td>
       <td>
         Min: <%= region.min_pos %> <br/>
         Max: <%= region.max_pos %>
       </td>
       <td><%= region.priority %></td>
-      <td><%= region.owners %> ...</td>
-      <td><%= region.members %> ...</td>
-      <td>Edit</td>
+      <td><%= region.owners %></td>
+      <td><%= region.members %></td>
+      <td>
+        <%= link_to 'Edit', edit_region_path(region) %>
+         |
+        <%= link_to 'Delete', region_path(region), :method => :delete %>
+      </td>
     </tr>
     <% end %>
   </tbody>
   <tfoot>
-    <tr><th colspan="3">
-      <div class="ui blue labeled icon button"><i class="user icon"></i> Add User</div>
-    </th>
-  </tr></tfoot>
+    <tr>
+      <th colspan="8">
+        <a href="<%= new_region_path %>">
+          <div class="ui blue labeled button">Add Region</div>
+        </a>
+      </th>
+    </tr>
+  </tfoot>
 </table>
 
 <%= content_for :footer_scripts do %>
   <script type="text/javascript">
-    (function(){
-      ('.sortable').tablesort();
+    $(function(){
+      $('.sortable').tablesort();
     });
   </script>
 <% end %>
